--- a/ui/bower.json
+++ b/ui/bower.json
@@ -13,9 +13,12 @@
     "angular-busy": "4.1.2",
     "angular-growl-v2": "0.7.2",
     "angular-highlightjs": "0.3.2",
+    "angular-google-chart": "0.0.11",
+    "angular-cookies": "1.3.16-build.110+sha.9055b4e",
     "xregexp": "2.0.0",
     "moment": "2.8.4",
-    "angular-utils-pagination": "0.4.0"
+    "angular-utils-pagination": "0.4.0",
+    "d3": "3.5.5"
   },
   "devDependencies": {
     "angular-mocks": "1.3.5",
